# stackweave-api

./: .gitignore  main.py  pyproject.toml  pytest.ini  solver_models.py  solver_wrapper.py
models/: __init__.py  template_ui.py  templates.py
routes/: __init__.py  solve.py  templates.py  templates_ui.py
stackweave_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py
tests/api/: test_template_endpoints.py  test_templates.py
tests/solver/: test_template_solver.py
tests/templates/: __init__.py  test_schema.py
