[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stackweave-api"
version = "0.1.0"
description = "FastAPI backend for Stackweave dependency solver"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Paul", email = "paul@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "stackweave @ file:///Users/paul/Documents/programming/knot/knot-cli",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.setuptools]
packages = []
